# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/runtime_core/static_core/ark_config.gni")
if (!ark_standalone_build) {
  import("//build/ohos.gni")
}
import("$ark_root/plugins/plugins.gni")
import("irtoc.gni")
import("irtoc_modular.gni")

if (enable_irtoc) {
  config("irtoc_public_config") {
    include_dirs = [
      "$root_build_dir/generated",
      "$target_gen_dir",
      "$ark_root/irtoc",
    ]

    cflags_cc = [
      "-isystem",
      rebase_path("$ark_third_party_root/elfio", root_build_dir),
      "-isystem",
      rebase_path("$ark_third_party_root/elfio/elfio", root_build_dir),
    ]
    configs = []
    if (ark_standalone_build || ark_static_standalone_build) {
      configs += [ "$ark_third_party_root/elfio:elfio_public_config" ]
    }
    if (defined(ark_static_standalone_build) && ark_static_standalone_build) {
      include_dirs += [ "$ark_root/../common_runtime" ]
    } else {
      configs += [ "$common_runtime_root:common_runtime_public_config" ]
    }
  }

  generated_file("irtoc_plugins_file") {
    outputs = [ irtoc_plugins_file ]
    inputs = plugin_irtoc_plugins
    output_conversion = "list lines"
    contents = rebase_path(inputs, ark_root)
  }

  ark_gen_file("irtoc_options_h") {
    template_file = "$ark_root/templates/options/options.h.erb"
    data = [ "backend/options.yaml" ]
    api = [ "$ark_root/templates/common.rb" ]
    output_file = "$target_gen_dir/generated/irtoc_options_gen.h"
  }

  ohos_static_library("irtoc") {
    sources = [
      "backend/compilation.cpp",
      "backend/compiler/codegen_boundary.cpp",
      "backend/compiler/codegen_fastpath.cpp",
      "backend/compiler/codegen_nativeplus.cpp",
      "backend/compiler/dangling_pointers_checker.cpp",
      "backend/function.cpp",
      "backend/irtoc_options.cpp",
    ]
    configs = [
      ":irtoc_public_config",
      "$ark_root:ark_config",
      "$ark_root/libarkbase:arkbase_public_config",
      "$ark_root/libarkfile:arkfile_public_config",
      "$ark_root/compiler:arkcompiler_public_config",
      "$ark_root/compiler/optimizer/code_generator:arkencoder_config",
      "$ark_root/runtime/asm_defines:asmdefines_public_config",
      "$ark_root/runtime:arkruntime_public_config",
    ]

    deps = [
      ":irtoc_options_h",
      "$ark_root/compiler:irtoc_interface_extensions_includes_inl_h",
      "$ark_root/compiler:libarktscompiler",
      "$ark_root/compiler/optimizer/code_generator:libarkencoder",
      "$ark_root/cross_values:cross_values_getters_generate(${default_toolchain})",
      "$ark_root/libarkbase:libarktsbase",
      "$ark_root/runtime/asm_defines:asm_defines_generator",
    ]

    external_deps = [ sdk_libc_secshared_dep ]
    if (defined(ohos_indep_compiler_enable) && ohos_indep_compiler_enable) {
      external_deps += [ "elfio:elfio" ]
      cflags_cc = [ "-Wno-error=missing-field-initializers" ]  # for elfio.hpp
    }

    if (is_llvm_interpreter || is_llvm_fastpath) {
      configs += [ "$ark_root/libllvmbackend:libllvmbackend_public_config" ]
      deps += [ "$ark_root/libllvmbackend:libllvmbackend" ]
    }

    libs = platform_libs
    ldflags = platform_ldflags

    part_name = ark_part_name
    subsystem_name = "$ark_subsystem_name"
  }

  if (host_os != "mac") {
    irtoc_modular_compile("irtoc_fastpath") {
      scripts = [
        "scripts/common.irt",
        "scripts/string_helpers.irt",
        "scripts/allocation.irt",
        "scripts/resolvers.irt",
        "scripts/monitors.irt",
        "scripts/check_cast.irt",
        "scripts/gc.irt",
        "scripts/strings.irt",
        "scripts/string_builder.irt",
        "scripts/memcopy.irt",
        "scripts/arrays.irt",
      ]
      # NOTE(sukhikhalexander): implement validation issue #33412
    }

    irtoc_modular_compile("irtoc_interpreter") {
      scripts = [ "scripts/interpreter.irt" ]
      use_llvm_inline = true
    }

    irtoc_modular_compile("irtoc_tests") {
      scripts = [ "scripts/tests.irt" ]
    }

    irtoc_modular_compile("irtoc_ets_fastpath") {
      scripts = plugin_irtoc_scripts
    }
  }
}
